==> MikroElektronika/mikrosdk_v2/targets/pic_16bit/mikroe/dspic/src/i2c/implementation_1/hal_ll_i2c_master.c <==
#include "hal_ll_pps.h"
#include "hal_ll_gpio.h"
#include "hal_ll_odcon_map.h"
#include "hal_ll_i2c_master.h"
#include "hal_ll_i2c_pin_map.h"
#include "delays.h"
#define hal_ll_i2c_get_module_state_address ((hal_ll_i2c_master_handle_register_t *)*handle)
#define hal_ll_i2c_get_handle (hal_ll_i2c_master_handle_register_t *)hal_ll_i2c_get_module_state_address->hal_ll_i2c_master_handle
#define hal_ll_i2c_get_base_struct(_handle) ((const hal_ll_i2c_base_handle_t *)_handle)
#define hal_ll_i2c_get_base_from_hal_handle ((hal_ll_i2c_hw_specifics_map_t *)((hal_ll_i2c_master_handle_register_t *)\
                                            (((hal_ll_i2c_master_handle_register_t *)(handle))->hal_ll_i2c_master_handle))->hal_ll_i2c_master_handle)->base
#define hal_ll_i2c_check_speed(_speed) ((((Get_Fosc_kHz()*250UL/_speed)-(Get_Fosc_kHz()*250UL/1111111)))-1)
#define hal_ll_i2c_check_speed(_speed) (((Get_Fosc_kHz()*250UL/_speed))-2)
#define hal_ll_i2c_check_speed(_speed) ((((Get_Fosc_kHz()*500UL/_speed)-(Get_Fosc_kHz()*500UL/1111111)))-1)
#define HAL_LL_I2C_MAX_SPEED_VALUE (0x1FFU)
#define HAL_LL_I2C_MASTER_SPEED_100K (100000UL)
#define HAL_LL_I2C_MASTER_SPEED_400K (400000UL)
#define HAL_LL_I2C_DEFAULT_PASS_COUNT (100000)
#define HAL_LL_I2C_IDLE_MASK (0x1FU)
#define HAL_LL_I2CCON_SEN_BIT (0)
#define HAL_LL_I2CCON_RSEN_BIT (1)
#define HAL_LL_I2CCON_PEN_BIT (2)
#define HAL_LL_I2CCON_RCEN_BIT (3)
#define HAL_LL_I2CCON_ACKEN_BIT (4)
#define HAL_LL_I2CCON_ACKDT_BIT (5)

static hal_ll_err_t hal_ll_i2c_master_read_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *read_data_buf, size_t len_read_data, hal_ll_i2c_master_end_mode_t mode ) {
    const hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct( map->base );
    size_t transfer_counter = 0;
    uint16_t time_counter = map->timeout;
    uint8_t status = HAL_LL_I2C_MASTER_SUCCESS;

    if ( HAL_LL_I2C_MASTER_WRITE_THEN_READ != mode ) {
        status = hal_ll_i2c_master_start( map );
        if ( HAL_LL_I2C_MASTER_SUCCESS != status ) {
            return status;
        }
    }

    clear_reg_bit( hal_ll_hw_reg->if_reg_addr, hal_ll_i2c_if[map->module_index] );
    write_reg( hal_ll_hw_reg->i2ctrn_reg_addr, ( ( map->address << 1 ) | 1 ) );

    status = hal_ll_i2c_master_check_write( map );
    if ( HAL_LL_I2C_MASTER_SUCCESS != status ) {
        return status;
    }

    for ( transfer_counter = 0; transfer_counter < len_read_data; transfer_counter++ ) {
        clear_reg_bit( hal_ll_hw_reg->if_reg_addr, hal_ll_i2c_if[map->module_index] );
        set_reg_bit( hal_ll_hw_reg->i2ccon_reg_addr, HAL_LL_I2CCON_RCEN_BIT );

        while ( !check_reg_bit( hal_ll_hw_reg->if_reg_addr, hal_ll_i2c_if[map->module_index] ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_READ;
            }
        }

        read_data_buf[transfer_counter] = read_reg( hal_ll_hw_reg->i2crcv_reg_addr );

        if ( transfer_counter < ( len_read_data - 1 ) ) {
            clear_reg_bit( hal_ll_hw_reg->i2ccon_reg_addr, HAL_LL_I2CCON_ACKDT_BIT );
        } else {
            set_reg_bit( hal_ll_hw_reg->i2ccon_reg_addr, HAL_LL_I2CCON_ACKDT_BIT );
        }

        clear_reg_bit( hal_ll_hw_reg->if_reg_addr, hal_ll_i2c_if[map->module_index] );
        set_reg_bit( hal_ll_hw_reg->i2ccon_reg_addr, HAL_LL_I2CCON_ACKEN_BIT );

        time_counter = map->timeout;
        while ( !check_reg_bit( hal_ll_hw_reg->if_reg_addr, hal_ll_i2c_if[map->module_index] ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_READ;
            }
        }
    }

    set_reg_bit( hal_ll_hw_reg->i2ccon_reg_addr, HAL_LL_I2CCON_PEN_BIT );

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_master_write_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *write_data_buf, size_t len_write_data, hal_ll_i2c_master_end_mode_t mode ) {
    const hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct( map->base );
    size_t transfer_counter = 0;
    uint8_t status = HAL_LL_I2C_MASTER_SUCCESS;

    status = hal_ll_i2c_master_start( map );
    if ( HAL_LL_I2C_MASTER_SUCCESS != status ) {
        return status;
    }

    clear_reg_bit( hal_ll_hw_reg->if_reg_addr, hal_ll_i2c_if[map->module_index] );
    write_reg( hal_ll_hw_reg->i2ctrn_reg_addr, ( map->address << 1 ) );
    status = hal_ll_i2c_master_check_write( map );
    if ( status != HAL_LL_I2C_MASTER_SUCCESS ) {
        return status;
    }

    for ( transfer_counter = 0; transfer_counter < len_write_data; transfer_counter++ ) {
        write_reg( hal_ll_hw_reg->i2ctrn_reg_addr, write_data_buf[transfer_counter] );
        status = hal_ll_i2c_master_check_write( map );
        if( status != HAL_LL_I2C_MASTER_SUCCESS ) {
            return status;
        }
    }

    if ( ( HAL_LL_I2C_MASTER_END_MODE_RESTART == mode ) || ( HAL_LL_I2C_MASTER_WRITE_THEN_READ == mode ) ) {
        /**
         * @note When R/W = 0, the input sample acquisition period starts
         * on the falling edge of SCL once the C0 bit of the command
         * byte has been latched, and ends when a Stop or
         * repeated Start condition has been issued.
         **/
        #ifdef __TFT_RESISTIVE_TSC2003__
        Delay_1ms();
        #endif

        status = hal_ll_i2c_master_restart( map );
        if ( HAL_LL_I2C_MASTER_SUCCESS != status ) {
            return status;
        }
    } else if ( HAL_LL_I2C_MASTER_END_MODE_STOP == mode ) {
        set_reg_bit( hal_ll_hw_reg->i2ccon_reg_addr, HAL_LL_I2CCON_PEN_BIT );
    }

    if ( !check_reg_bit( hal_ll_hw_reg->i2cstat_reg_addr, HAL_LL_I2CSTAT_ACKSTAT_BIT ) ) {
        return HAL_LL_I2C_MASTER_SUCCESS;
    } else {
        return HAL_LL_I2C_MASTER_ERROR;
    }
}

static hal_ll_err_t hal_ll_i2c_master_start( hal_ll_i2c_hw_specifics_map_t *map ) {
    const hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct( map->base );
    uint16_t time_counter = map->timeout;

    while ( !hal_ll_i2c_master_is_idle( hal_ll_hw_reg ) ) {
        if ( map->timeout ) {
            if ( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_START;
        }
    }

    set_reg_bit( hal_ll_hw_reg->i2ccon_reg_addr, HAL_LL_I2CCON_SEN_BIT );

    time_counter = map->timeout;
    while ( check_reg_bit( hal_ll_hw_reg->i2ccon_reg_addr, HAL_LL_I2CCON_SEN_BIT ) ) {
        if ( map->timeout ) {
            if ( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_START;
        }
    }

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static void hal_ll_i2c_master_map_pins( uint8_t module_index, hal_ll_i2c_pin_id *index_list ) {
    // Map new pins
    hal_ll_i2c_hw_specifics_map[module_index].pins.pin_scl.pin_name = hal_ll_i2c_scl_map[index_list[module_index].pin_scl].pin;
    hal_ll_i2c_hw_specifics_map[module_index].pins.pin_sda.pin_name = hal_ll_i2c_sda_map[index_list[module_index].pin_sda].pin;
}
