==> MikroElektronika/mikrosdk_v2/targets/avr_8bit/mikroe/avr/src/i2c/implementation_3/hal_ll_i2c_master.c <==
#include "hal_ll_gpio.h"
#include "hal_ll_i2c_master.h"
#define hal_ll_i2c_get_module_state_address (( hal_ll_i2c_master_handle_register_t *)*handle)
#define hal_ll_i2c_get_handle (hal_ll_i2c_master_handle_register_t *)hal_ll_i2c_get_module_state_address->hal_ll_i2c_master_handle
#define hal_ll_i2c_get_base_struct(_handle) (( hal_ll_i2c_base_handle_t *)_handle)
#define hal_ll_i2c_get_base_from_hal_handle ((hal_ll_i2c_hw_specifics_map_t *)((hal_ll_i2c_master_handle_register_t *)\
                                            (((hal_ll_i2c_master_handle_register_t *)(handle))->hal_ll_i2c_master_handle))->hal_ll_i2c_master_handle)->base
#define hal_ll_i2c_module_num(_module_num) (_module_num - 1)
#define HAL_LL_I2C_DEFAULT_PASS_COUNT (10000)
#define HAL_LL_I2C_MASTER_SPEED_50K (50000UL)
#define HAL_LL_I2C_MASTER_BIT_COUNTER (0x80)
#define HAL_LL_I2C_MASTER_SLAVE_ADDRESS_BYTE (1)

static hal_ll_err_t hal_ll_i2c_master_read_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *read_data_buf, size_t len_read_data, hal_ll_i2c_master_end_mode_t mode ) {
    uint8_t ptr_slave_address = ( ( hal_ll_i2c_hw_specifics_map_local->address << 1 ) | 1 );
    uint16_t time_counter = map->timeout;

    // Apply start signal only if READ functionality is used (skip if WRITE then READ is used instead).
    if( HAL_LL_I2C_MASTER_WRITE_THEN_READ != mode ) {
        hal_ll_i2c_master_start( hal_ll_i2c_hw_specifics_map_local );
    }

    // Map write and read functions.
    map_pointer_functions( hal_ll_i2c_hw_specifics_map_local->module_index );

    // Send slave address and a "Read" bit (via function pointer).
    ( hal_ll_i2c_hw_specifics_map_local->mapped_functions.mapped_function_software_i2c_signal_write )
    ( hal_ll_i2c_hw_specifics_map_local->base, &ptr_slave_address, HAL_LL_I2C_MASTER_SLAVE_ADDRESS_BYTE );

    // Read byte(s) of data (via function pointer).
    ( hal_ll_i2c_hw_specifics_map_local->mapped_functions.mapped_function_software_i2c_signal_read )
    ( hal_ll_i2c_hw_specifics_map_local->base, read_data_buf, len_read_data );

    // Stop signal.
    hal_ll_i2c_master_stop( hal_ll_i2c_hw_specifics_map_local );

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_master_write_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *write_data_buf, size_t len_write_data, hal_ll_i2c_master_end_mode_t mode ) {
    uint8_t ptr_slave_address = hal_ll_i2c_hw_specifics_map_local->address << 1;

    /*!< @brief Start signal. */
    hal_ll_i2c_master_start( hal_ll_i2c_hw_specifics_map_local );

    // Map write function.
    map_pointer_functions( hal_ll_i2c_hw_specifics_map_local->module_index );

    /*!< @brief Send slave address and a "Write" bit (via function pointer). */
    ( hal_ll_i2c_hw_specifics_map_local->mapped_functions.mapped_function_software_i2c_signal_write )
    ( hal_ll_i2c_hw_specifics_map_local->base, &ptr_slave_address, HAL_LL_I2C_MASTER_SLAVE_ADDRESS_BYTE );

    /*!< @brief Write byte(s) of data (via function pointer). */
    ( hal_ll_i2c_hw_specifics_map_local->mapped_functions.mapped_function_software_i2c_signal_write )
    ( hal_ll_i2c_hw_specifics_map_local->base, write_data_buf, len_write_data );

    /*!< @brief Generate stop (or a restart) signal. */
    if( HAL_LL_I2C_MASTER_END_MODE_STOP == mode ) {
        hal_ll_i2c_master_stop( hal_ll_i2c_hw_specifics_map_local );
    } else {
        /**
         * @note When R/W = 0, the input sample acquisition period starts
         * on the falling edge of SCL once the C0 bit of the command
         * byte has been latched, and ends when a Stop or
         * repeated Start condition has been issued.
         **/
        #ifdef __TFT_RESISTIVE_TSC2003__
        Delay_1ms();
        #endif
        hal_ll_i2c_master_start( hal_ll_i2c_hw_specifics_map_local );
    }
    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_master_start( hal_ll_i2c_hw_specifics_map_t *map ) {
    // Get appropriate PORT, PIN and DDR registers.
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct( map->base );

    // Set SDA direction to be input.
    clear_reg_bit( hal_ll_hw_reg->ddr_reg_addr, map->pins_mask.pin_mask_sda );

    // Stabilization time.
    software_i2c_timing_value_a();

    // Set SCL direction to be input.
    clear_reg_bit( hal_ll_hw_reg->ddr_reg_addr, map->pins_mask.pin_mask_scl );

    // Stabilization time.
    software_i2c_timing_value_a();

    // Set SDA direction to be output.
    set_reg_bit( hal_ll_hw_reg->ddr_reg_addr, map->pins_mask.pin_mask_sda );

    // Stabilization time.
    software_i2c_timing_value_a();

    // Set SCL direction to be output.
    set_reg_bit( hal_ll_hw_reg->ddr_reg_addr, map->pins_mask.pin_mask_scl );

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static void hal_ll_i2c_master_map_pins( uint8_t module_index, hal_ll_pin_name_t scl, hal_ll_pin_name_t sda ) {
    // Map new pins.
    hal_ll_i2c_hw_specifics_map[ module_index ].pins.pin_scl = scl;
    hal_ll_i2c_hw_specifics_map[ module_index ].pins.pin_sda = sda;

    // Map new pin's masks.
    hal_ll_i2c_hw_specifics_map[ module_index ].pins_mask.pin_mask_scl = ( uint8_t )scl % PORT_SIZE;
    hal_ll_i2c_hw_specifics_map[ module_index ].pins_mask.pin_mask_sda = ( uint8_t )sda % PORT_SIZE;
}
